feat: Implement user authentication and authorization with Auth0
- Added UserProvider to wrap the application with Auth0 and custom auth context.
- Created auth-context to manage user state, roles, and permissions.
- Introduced role-based access control with permissions for admin and user roles.
- Updated Navigation component to display user info and admin link based on authentication state.
- Added middleware for Auth0 to protect routes.
- Created API routes for Auth0 authentication flows (login, signup, logout, callback).
- Implemented S3 image utilities for handling image URLs and optimizations.
- Enhanced user experience with loading states and error handling in authentication.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.5.0",
+    "@auth0/nextjs-auth0": "^4.10.0",
     "@aws-amplify/ui-react": "^6.12.0",
     "@radix-ui/react-slot": "^1.2.3",
     "aws-amplify": "^6.15.6",
