--- a/amplify.yml
+++ b/amplify.yml
@@ -11,7 +11,7 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm ci --cache .npm --prefer-offline
+        - npm ci --cache --legacy-peer-deps .npm --prefer-offline
         - '# Safari Culture - Wilderness Namibia platform'
         - echo "Building Safari Culture for luxury tourism..."
         - '# Ensure environment variables are available'
