--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
-    "mysql2": "^3.15.0",
+    "mysql2": "^3.15.3",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -40,19 +40,24 @@
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^13.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^30.2.0",
     "@tailwindcss/postcss": "^4",
     "@types/cors": "^2.8.19",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.3",
+    "jest": "^30.2.0",
     "tailwindcss": "^4",
+    "ts-jest": "^29.4.5",
     "typescript": "^5"
   }
 }
