--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@auth0/nextjs-auth0": "^4.10.0",
     "@aws-sdk/client-secrets-manager": "^3.911.0",
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.0.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@types/leaflet": "^1.9.21",
     "aws-amplify": "^6.15.6",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +30,7 @@
     "framer-motion": "^12.23.22",
     "helmet": "^8.1.0",
     "jwks-rsa": "^3.2.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
@@ -37,6 +40,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-toastify": "^11.0.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
