--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lucide-react": "^0.544.0",
     "morgan": "^1.10.1",
     "mysql2": "^3.15.3",
-    "next": "15.5.3",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
